Address Jack's comments
Signed-off-by: Finn Roblin <finnrobl@amazon.com>